k8s/vault/vault-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-vs
  namespace: istio-system
spec:
  exportTo:
    - "."
  hosts:
  - "vault.rezz.io"
  gateways:
  - argocd-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vault-ui.vault.svc.cluster.local
        port:
          number: 8200
      weight: 100
